deployment/MLBuffet/ingress-mlbuffet.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlbuffet-endpoints
  namespace: mlbuffet
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: fractal.ik-europe.eu
    http:
      paths:
      - path: /mlbuffet/?(.*)
        pathType: Prefix
        backend:
          service:
            name: inferrer
            port:
              number: 8000
